<?xml version="1.0" encoding="utf-8"?><!--
 * Truecaller SDK Copyright notice and License
 * <p/>
 * Copyright(c)2015-present,True Software Scandinavia AB.All rights reserved.
 * <p/>
 * In accordance with the separate agreement executed between You and Your respective Truecaller entity, You are granted a limited,non-exclusive,
 * non-sublicensable,non-transferrable,royalty-free,license to use the Truecaller SDK Product in object code form only,solely for the purpose of using the
 * Truecaller SDK Product with the applications and API’s provided by Truecaller.
 * <p/>
 * THE TRUECALLER SDK PRODUCT IS PROVIDED WITHOUT WARRANTY OF ANY KIND,EXPRESS OR IMPLIED,INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE,SOFTWARE QUALITY,PERFORMANCE,DATA ACCURACY AND NON-INFRINGEMENT.IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
 * BE LIABLE FOR ANY CLAIM,DAMAGES OR OTHER LIABILITY,WHETHER IN AN ACTION OF CONTRACT,TORT OR OTHERWISE,ARISING FROM,OUT OF OR IN CONNECTION WITH THE
 * TRUECALLER SDK PRODUCT OR THE USE OR OTHER DEALINGS IN THE TRUE SDK PRODUCT.AS A RESULT,THE TRUECALLER SDK PRODUCT IS PROVIDED”AS IS”AND BY INTEGRATING
 * THE TRUECALLER
 * SDK PRODUCT YOU ARE ASSUMING THE ENTIRE RISK AS TO ITS QUALITY AND PERFORMANCE
-->
<resources>
    <string name="app_name">SDK Sample</string>
    <string name="partnerKey">1uBkN7c604f716da04af3b218666ba47b6630</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="job">Job</string>
    <string name="custom_button">Custom Button</string>
    <string name="get_profile">GET PROFILE</string>
    <string name="create_profile">Create Profile</string>
    <string name="title_activity_signed_in">SignedInActivity</string>
    <string name="large_text">
        "You're now signed in. \n\n\n"
        "Get more verified sign ups by connecting TrueSDK\n\n"

        "FREE\n"
        "No hidden fees. And no cost for verifying Truecaller users.\n\n"
        "SMOOTH\n"
        "Frictionless sign ups in 3rd party Android applications.\n\n"
        "LIGHTWEIGHT\n"
        "Ultra-lightweight so you can set up and go live quickly.\n\n"
        "TrueSDK for developers\n"
        "A phone number is much more than a way to connect — it’s an identity. Truecaller offers a unique tool, TrueSDK, for "
        "No more One Time Password (OTP) verification or users dropping off. TrueSDK helps end users quickly and"
        "effortlessly utilize their Truecaller credentials to sign-up with one-touch to third-party apps with their phone "
        "number.\n\n"
        "Save your time and resources. TrueSDK will help drastically reduce costs, improve the overall quality of your "
        "community (no more spam accounts) and accelerate global user growth.\n\n"

    </string>
    <string name="phone_number">Phone number</string>
    <string name="proceed">Proceed</string>
    <string name="country_code_in">+91\ </string>
    <string name="verify">Verify</string>
    <string name="first_name">First Name</string>
    <string name="john">John</string>
    <string name="last_name">Last Name</string>
    <string name="smith">Smith</string>
    <string name="otp_code">OTP Code</string>
    <string name="hint_otp">555&#8211;123</string>
    <string name="waiting_for_otp_sms">Waiting for OTP SMS</string>
    <string name="waiting_for_missed_call">Waiting for Missed Call</string>
    <string name="hint_phone_num">99999&#8211;11111</string>
    <string name="auto_fill_token">%1s \u2714</string>
    <string name="show_fullscreen">Show FullScreen</string>
    <string name="show_skip_footer">Show Skip Footer</string>
    <string name="with_otp">With Otp</string>
    <string name="let_s_go">Let\'s Go!!</string>
    <string name="show_bottomsheet">Show BottomSheet</string>
    <string name="shape">Rectangular Button</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="retry_timer">retry again in %s seconds</string>
    <string name="retry_now">retry now!!</string>
    <string-array name="SdkPartnerLoginPrefixOptionsArray">
        <item>To get started</item>
        <item>To continue</item>
        <item>To place order</item>
        <item>To complete your purchase</item>
        <item>To checkout</item>
        <item>To complete your booking</item>
        <item>To proceed with your booking</item>
        <item>To continue with your booking</item>
        <item>To get details</item>
        <item>To view more</item>
        <item>To continue reading</item>
        <item>To proceed</item>
        <item>For new updates</item>
        <item>To get updates</item>
        <item>To subscribe</item>
        <item>To subscribe &amp; get updates</item>
    </string-array>
    <string-array name="SdkPartnerLoginSuffixOptionsArray">
        <item>please verify mobile number</item>
        <item>please login</item>
        <item>please signup</item>
        <item>please login/signup</item>
        <item>please register</item>
        <item>please sign in</item>
    </string-array>
    <string-array name="SdkPartnerCTAPrefixOptionsArray">
        <item>Use %s</item>
        <item>Continue with %s</item>
        <item>Proceed with %s</item>
    </string-array>
    <string-array name="SdkPartnerSampleColors">
        <item>#5D4037</item>
        <item>white</item>
        <item>#0f6cd9</item>
        <item>red</item>
        <item>blue</item>
        <item>green</item>
        <item>black</item>
        <item>gray</item>
        <item>cyan</item>
        <item>magenta</item>
        <item>yellow</item>
        <item>lightgray</item>
        <item>darkgray</item>
        <item>grey</item>
        <item>lightgrey</item>
        <item>darkgrey</item>
        <item>aqua</item>
        <item>fuchsia</item>
        <item>lime</item>
        <item>maroon</item>
        <item>navy</item>
        <item>olive</item>
        <item>purple</item>
        <item>silver</item>
        <item>teal</item>
    </string-array>
</resources>
