<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verificationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="gone"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please tell us your\nMobile Number"
            android:textColor="@color/lightBlue"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Mobile number"
            android:textColor="#b5bbc9" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_phone_num"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/lightBlue"
            android:textColorHint="@color/colorPrimaryDark50"
            android:textSize="@dimen/sp24" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_otp"
            android:inputType="phone"
            android:maxLength="6"
            android:textColor="@color/lightBlue"
            android:textColorHint="@color/colorPrimaryDark50"
            android:textSize="@dimen/sp32"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/layer_bg"
            android:drawableEnd="@drawable/ic_next_filled"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/lightBlue"
            android:textColorHint="@color/colorPrimaryDark50"
            android:textSize="@dimen/sp32"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/timerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/lightBlue"
            android:visibility="gone"
            tools:text="@string/retry_timer"
            tools:visibility="visible" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProceed"
        style="@style/DefaultButton"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/white"
        android:text="@string/proceed"
        android:textColor="@color/lightBlue"
        android:textSize="16sp" />

    <com.truecaller.android.sdksample.utils.NumericKeyboard
        android:id="@+id/numKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnProceed"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        app:field="@id/editPhone"
        app:keyTextColor="@color/dial_text"
        app:keyTextSize="22sp" />

    <include
        layout="@layout/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>